syntax = "proto3";

package pcemixer;

option go_package = ".;pcemixerpb";

import "google/api/annotations.proto";

message AddRequest {
  int64 firstNum = 1;
  int64 secondNum = 2;
}

message AddResponse { int64 result = 1; }
service PceMixer {
  // API for adding two integers
  //
  //
  rpc Add(AddRequest) returns(AddResponse) {
    option (google.api.http) = {
        post : "v1/add"
        body : "*"
    };
  }
}

