syntax = "proto3";

package pceadder;

option go_package = ".;pceadderpb";


service PceAdder {
    rpc Add(Request) returns (Response);
}

message Request {
    int64 a = 1;
    int64 b = 2;
}

message Response {
    int64 result = 1;
}